--- a/public/resources/locale/pl-PL.json
+++ b/public/resources/locale/pl-PL.json
@@ -134,7 +134,8 @@
           "subjectObjective": "Cele przedmiotu"
         },
         "versions": {
-          "name": "Wersje"
+          "name": "Wersje",
+          "single": "Wersja"
         }
       }
     },
